--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -43,7 +43,7 @@
 </head>
 <body>
     <h1>Privacy Policy for Guess the Flag</h1>
-    <p class="last-updated">Last Updated: January 15, 2026</p>
+    <p class="last-updated">Last Updated: January 23, 2026</p>
 
     <h2>Introduction</h2>
     <p>
@@ -90,10 +90,13 @@
     <h2>Information We Do NOT Collect</h2>
     <ul>
         <li>Personal identification information (name, email, phone number, etc.)</li>
-        <li>Location data</li>
-        <li>Device identifiers (IDFA is not used for tracking purposes)</li>
-        <li>Crash reports</li>
-        <li>Any personal or sensitive information</li>
+        <li>Precise or approximate location data</li>
+        <li>Device identifiers for tracking (IDFA is not collected or used)</li>
+        <li>Photos, videos, or other media files</li>
+        <li>Contacts, calendar, or other personal device data</li>
+        <li>Payment or financial information</li>
+        <li>Browsing history outside the app</li>
+        <li>Any data that can personally identify you</li>
     </ul>
 
     <h2>Third-Party Services</h2>
@@ -102,23 +105,23 @@
     </p>
     <ul>
         <li><strong>Google Firebase Analytics:</strong> For anonymous, aggregated usage analytics. Firebase is subject to Google's <a href="https://policies.google.com/privacy" target="_blank">Privacy Policy</a> and <a href="https://firebase.google.com/terms" target="_blank">Firebase Terms of Service</a>. No personal information is shared with Firebase.</li>
-        <li><strong>Google AdMob:</strong> For displaying advertisements in the app. AdMob may collect data to serve personalized ads based on your usage patterns and interests. For more information, visit <a href="https://policies.google.com/technologies/ads" target="_blank">Google's Advertising Policies</a>.</li>
+        <li><strong>Google AdMob:</strong> For displaying non-personalized advertisements in the app. These ads do not use device identifiers for tracking or ad targeting. For more information, visit <a href="https://policies.google.com/technologies/ads" target="_blank">Google's Advertising Policies</a>.</li>
     </ul>
 
-    <h2>Advertisements and Ad Personalization</h2>
+    <h2>Advertisements</h2>
     <p>
-        Our app displays advertisements powered by Google AdMob. These ads may be personalized based on your app usage and browsing behavior within the app to provide more relevant advertising.
+        Our app displays non-personalized advertisements powered by Google AdMob. These ads are shown without using your personal data or device identifiers (IDFA) for targeting purposes.
     </p>
     <p>
-        We use Google's User Messaging Platform (UMP) to manage user consent for:
+        <strong>What this means:</strong>
     </p>
     <ul>
-        <li>Data collection for ad personalization</li>
-        <li>Analytics data collection</li>
-        <li>Compliance with privacy regulations (GDPR, CCPA, and other regional privacy laws)</li>
+        <li>Ads are not based on your personal profile or browsing history</li>
+        <li>No cross-app tracking is performed</li>
+        <li>Ad selection is based only on contextual information (such as the app content)</li>
     </ul>
     <p>
-        <strong>Your Control:</strong> You can manage your consent preferences at any time by going to Settings > Privacy & Consent in the app. You can also opt out of personalized ads through your device settings.
+        <strong>Your Control:</strong> You can control analytics data collection at any time by going to Settings > Analytics in the app.
     </p>
 
     <h2>GDPR and Your Privacy Rights</h2>
@@ -126,9 +129,10 @@
         If you are in the European Union or any region with GDPR protections, you have the following rights:
     </p>
     <ul>
-        <li><strong>Right to Access:</strong> You can request to know what data we collect about you</li>
-        <li><strong>Right to Withdraw Consent:</strong> You can withdraw your consent for data collection at any time through Settings > Privacy & Consent</li>
-        <li><strong>Right to Object:</strong> You can object to ad personalization and analytics collection</li>
+        <li><strong>Right to Access:</strong> You can request to know what anonymous data we collect (Firebase Analytics)</li>
+        <li><strong>Right to Withdraw Consent:</strong> You can disable analytics collection at any time through Settings > Analytics in the app</li>
+        <li><strong>Right to Object:</strong> You can opt out of analytics collection through the app settings</li>
+        <li><strong>Right to Data Portability:</strong> Since all game progress is stored locally on your device, you have full control over your data</li>
     </ul>
     <p>
         To exercise any of these rights or for privacy-related questions, please contact us at <a href="mailto:karachevpavel@icloud.com">karachevpavel@icloud.com</a>.
@@ -142,8 +146,7 @@
 
     <h2>Data Security</h2>
     <p>
-        Since we do not collect or transmit any data, there is no risk of your information being
-        intercepted or accessed by unauthorized parties through our app.
+        We take data security seriously. The anonymous analytics data we collect through Firebase is transmitted securely using industry-standard encryption. Since we do not collect any personal information, there is minimal risk to your privacy. All game progress and settings are stored locally on your device and never transmitted to external servers.
     </p>
 
     <h2>Your Rights</h2>
@@ -171,10 +174,18 @@
         <p><strong>Email:</strong> <a href="mailto:karachevpavel@icloud.com">karachevpavel@icloud.com</a></p>
     </div>
 
-    <h2>Consent</h2>
+    <h2>Consent and Opt-Out</h2>
     <p>
-        By using Guess the Flag, you consent to this Privacy Policy. Since we do not collect any
-        personal information, there is no data processing that requires your additional consent.
+        By using Guess the Flag, you consent to this Privacy Policy. Analytics data collection is enabled by default to help us improve the app, but you can opt out at any time through Settings > Analytics in the app.
     </p>
+    <p>
+        We use an opt-out model for analytics, which means:
+    </p>
+    <ul>
+        <li>Anonymous analytics are collected by default (legitimate interest basis under GDPR)</li>
+        <li>You can disable analytics collection at any time in the app settings</li>
+        <li>Non-personalized ads are shown regardless of your analytics preference</li>
+        <li>No personal data or device identifiers are used for tracking</li>
+    </ul>
 </body>
 </html>
