fix: issue with link url

--- a/sudoku/index.html
+++ b/sudoku/index.html
@@ -704,7 +704,7 @@
             <div class="cta-section">
                 <h2>Start Playing</h2>
                 <p>Join thousands of players sharpening their minds</p>
-                <a href="#" class="download-button">Download</a>
+                <a href="https://apps.apple.com/us/app/sudoku-elite/id6758052404" class="download-button">Download</a>
             </div>
         </div>
     </div>
@@ -875,7 +875,7 @@
             <div class="cta-section">
                 <h2>Начать играть</h2>
                 <p>Присоединяйтесь к тысячам игроков, тренирующих свой ум</p>
-                <a href="#" class="download-button">Загрузить</a>
+                <a href="https://apps.apple.com/us/app/sudoku-elite/id6758052404" class="download-button">Загрузить</a>
             </div>
         </div>
     </div>
