fix: issue with link url

--- a/sudoku/index.html
+++ b/sudoku/index.html
@@ -626,7 +626,7 @@
             <div class="hero-content">
                 <h1>Sudoku Elite</h1>
                 <p class="hero-subtitle">Pure Logic. Pure Challenge.</p>
-                <a href="#" class="download-button">Download</a>
+                <a href="https://apps.apple.com/us/app/sudoku-elite/id6758052404" class="download-button">Download</a>
             </div>
         </div>
 
@@ -797,7 +797,7 @@
             <div class="hero-content">
                 <h1>Sudoku Elite</h1>
                 <p class="hero-subtitle">Чистая логика. Истинный вызов.</p>
-                <a href="#" class="download-button">Загрузить</a>
+                <a href="https://apps.apple.com/us/app/sudoku-elite/id6758052404" class="download-button">Загрузить</a>
             </div>
         </div>
 
