add new project

--- a/index.html
+++ b/index.html
@@ -268,6 +268,25 @@
                     </div>
                 </div>
 
+                <!-- Baby Names App -->
+                <div class="app-card">
+                    <div class="app-icon" style="background: linear-gradient(135deg, #FF6B8A 0%, #9B6FD4 50%, #4A90D9 100%);">&#128149;</div>
+                    <div class="app-content">
+                        <h3>Baby Names: Picker for Couples</h3>
+                        <p>The fun way for expecting couples to find the perfect baby name together. Swipe through names, connect with your partner, and celebrate your matches. 22+ languages supported.</p>
+                        <div class="app-tags">
+                            <span class="tag">iOS</span>
+                            <span class="tag">Swift</span>
+                            <span class="tag">SwiftUI</span>
+                            <span class="tag">Lifestyle</span>
+                        </div>
+                        <div class="app-links">
+                            <a href="baby-names/" class="app-link">View Website</a>
+                            <a class="app-link secondary" style="cursor:default; opacity:0.6;">Coming Soon</a>
+                        </div>
+                    </div>
+                </div>
+
                 <!-- Sudoku App -->
                 <div class="app-card">
                     <div class="app-icon" style="background: linear-gradient(135deg, #8B5CF6 0%, #6D28D9 100%);">🧩</div>
